2.12.1

* added: MIME types for .xz and .txz.
* added: shift-F8 for easy removal of oldmarks and newmarks.
* added: expand =8<suffix> to each of the marked filenames with the suffix
  appended.

2.12.0E

* merged 2.12.0 and 2.11.9E.

2.12.0

* fixed: the si(Z)e command now can correctly figure out the exit status
  of the du(1) command.
* fixed: the radix for the (N)ame command was not correctly initialized in
  an initial swap state (started with the -s option).
* fixed: unnecessary delay when a Unix c(O)mmand fails.
* changed: the "Please Wait" message when reading a directory with many entries
  is now interruptible by pressing ESC.
* added: substitution modifier ={2/foo/bar}
* added: display countdown on "Please Wait" when a directory with a lot of
  entries is being read
* added: (M)ore - <F2> (Redescend): return to a previous child directory.
* added shift-F2 as alternative for (M)ore - <F2>.
* added: (M)ore - <F4> (Color) and (M)ore - <F9> (Layout) as alternatives for
  shift-F4 and shift-F9.

2.11.9E

* merged 2.11.9 and 2.11.8E.

2.11.9

* fixed: a problem expanding sequences like '==8'.
* fixed: a problem expanding the '=7' escape.
* fixed: a problem when testing if a newer version is available.
* added: menu message providing help for the (N)ame command.
* changed: the semantics for the '=7' escape were changed.

2.11.8E

* merged 2.11.8 and 2.11.7E.

2.11.8

* fixed: child processes were not always correctly reaped. This caused
  lots of zombie processes.
* fixed: if a child process took a long time to make new data available on
  the filehandle, the process was erroneously removed from the job stack.
* fixed: svn does not complain any more if the current directory is a working
  copy, but '..' is not.
* fixed: when writing bookmarks, bookmark 0 is now correctly saved.
* fixed: editing an ACL did not work if the fg_editor contained spaces.

* added MIME types to config file for: awk, sh, bash, csh, tcsh, zsh, shar,