@@ -1,13 +1,13 @@
 #!/usr/bin/env perl
 #
 ##########################################################################
-# @(#) App::PFM::Screen 0.60
+# @(#) App::PFM::Screen 0.61
 #
 # Name:			App::PFM::Screen
-# Version:		0.60
+# Version:		0.61
 # Author:		Rene Uittenbogaard
 # Created:		1999-03-14
-# Date:			2011-09-09
+# Date:			2012-05-10
 # Requires:		Term::ScreenColor
 #
 
@@ -96,6 +96,32 @@ use constant R_CHDIR  => R_NEWDIR | R_SCREEN | R_STRIDE;
 
 use constant MOUSE_MODIFIER_ANY =>
 		MOUSE_MODIFIER_SHIFT | MOUSE_MODIFIER_META | MOUSE_MODIFIER_CONTROL;
+
+use constant CMDESCAPE_BREAK => 10;
+use constant CMDESCAPES      => [
+	'1 name',
+	'2 name.ext',
+	'3 curr path',
+	'4 mountpoint',
+	'5 swap path',
+	'6 base path',
+	'7 extension',
+	'8 selection',
+	'9 prev path',
+	'0 ln target',
+	'',
+	'',
+	'e editor',
+	'E fg editor',
+	'p pager',
+	'v viewer',
+#	'',
+#	'{#prefix}',
+#	'{%suffix}',
+#	'{/find/repl}',
+#	'{^} toupper',
+#	'{,} tolower',
+];
 
 our %EXPORT_TAGS = (
 	constants => [ qw(
@@ -937,6 +963,32 @@ sub pathline {
 	return $disppath . $spacer
 		. ($overflow ? $self->{_listing}->NAMETOOLONGCHAR : ' ')
 		. DEVICE_SPEC_START . $dev . DEVICE_SPEC_END;
+}
+
+=item I<list_escapes()>
+
+List the user-available recognized escapes.
+
+=cut
+
+sub list_escapes
+{
+	my ($self) = @_;
+	my $printline  = $self->BASELINE;
+	my $infocol    = $self->diskinfo->infocol;
+	my $e          = $self->{_config}{e};
+	my @cmdescapes = @{CMDESCAPES()};
+	$self->diskinfo->clearcolumn()->set_deferred_refresh(R_DISKINFO);
+	foreach (@cmdescapes[0 .. CMDESCAPE_BREAK],
+		"$e literal $e",
+		@cmdescapes[CMDESCAPE_BREAK+1 .. $#cmdescapes])
+	{
+		if ($printline <= $self->BASELINE + $self->screenheight) {
+			$self->at($printline++, $infocol)
+				->puts(sprintf(' %s', ((length) ? $e . $_ : $_)));
+		}
+	}
+	return;
 }
 
 =item I<on_after_parse_usecolor(App::PFM::Event $event)>
